<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nbucedog.sxsocket.MainActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TableLayout
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            <TableRow
                style="@style/TbrowStyle">
                <TextView
                    android:text="@string/username"
                    style="@style/textStyle_main"/>
                <EditText
                    style="@style/textStyle_main"
                    android:id="@+id/username"
                    android:background="@drawable/edit_bg"/>
            </TableRow>
            <TableRow
                style="@style/TbrowStyle">
                <TextView
                    android:text="@string/password"
                    style="@style/textStyle_main"/>
                <EditText
                    style="@style/textStyle_main"
                    android:id="@+id/password"
                    android:background="@drawable/edit_bg"/>
            </TableRow>
            <TableRow
                style="@style/TbrowStyle">
                <TextView
                    android:text="@string/ipaddress"
                    style="@style/textStyle_main"/>
                <EditText
                    style="@style/textStyle_main"
                    android:id="@+id/ipadress"
                    android:background="@drawable/edit_bg"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">
            <TableRow>
                <Button
                    android:id="@+id/btn_login"
                    style="@style/buttonStyle"
                    android:text="@string/login"/>
                <Button
                    android:id="@+id/btn_logout"
                    style="@style/buttonStyle"
                    android:text="@string/logout" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="15pt"
        android:text="@string/copyright"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>
